# mnist-nn-classifier

./: .gitignore  CMakeLists.txt  HD_NN.sln  LICENSE  README.md
Debug/: HD_NN.ilk
HD_NN/: HD_NN.cpp  HD_NN.vcxproj  HD_NN.vcxproj.filters  MNIST.cpp  MNIST.h  MNIST_DS.cpp  MNIST_DS.h  Matrix.cpp  Matrix.h  Network.cpp  Network.h
HD_NN/Debug/: network.obj.enc  vc142.idb
HD_NN/Debug/HD_NN.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  HD_NN.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
HD_NN/x64/Debug/: vc142.idb
HD_NN/x64/Debug/HD_NN.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  HD_NN.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: MNIST.cpp  MNIST.h  Matrix.h  main.cpp  matrix.cpp  matrix.h  mnist.cpp  mnist.h  network.cpp  network.h
x64/Debug/: HD_NN.ilk
